test/libsolidity/syntaxTests/parsing/import_complex_without_from.sol
import {hello, world};
// ----
// ParserError: (21-22): Expected "from".
